# LinuxDev2020

./: .gitignore  LICENSE  README.md
01_GitSsh/: test_text.txt
03_TerminalProject/: Makefile  README.md  Show.c
04_Multifile/: Makefile
05_Environmental/: Makefile.am  configure.ac  main.c  pcre_ops.c  pcre_ops.h
06_Debugging/: main.c
07_DebuggingTracing/: Makefile.am  README.md  configure.ac  mytests.sh  wrapper.c
08_TestingCoverage/: Makefile.am  README.md  configure.ac
08_TestingCoverage/src/: Makefile.am  buf.h  libbuf.c
08_TestingCoverage/tests/: Makefile.am  test_buf_grow_trunc.ts  test_buf_pop.ts  test_buf_push_indexing.ts  test_init_buf_free.ts  test_null_ptr.ts
09_I18nL10n/: Makefile.am  guesser_ru.po  main.c
09_I18nL10n/.deps/: main.Po
10_Documenting/: Doxyfile.in  Makefile.am  README.md  configure.ac  guesser.md.in  guesser.pot  guesser_ru.po  main.c  roman.c  roman.h  roman.md.in
11_Toolkits/: Makefile.am  README.md  configure.ac  main.c  test.txt
12_ScriptingText/: Makefile.am  configure.ac  insver.sh.in  prog.c
13_PatchInstall/: Makefile.am  README.md  configure.ac  guesser.pot  guesser_ru.po  main.c
